--- a/electronApp/package.json
+++ b/electronApp/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^3.0.10"
+  },
+  "dependencies": {
+    "electron-reload": "^1.4.0"
   }
 }
